@startuml class

package pydantic {
    class BaseModel {
        __init__(...)
    }
}

package models {
    package schemes {
        package schemes.schemes {
            class Model {
                int id
            }

            BaseModel <|-- Model
        }

        package schemes.auth {
            class User {

            }

            Model <|-- User
        }

        package scmeses.anime {
            class AnimeElement {
                Date publication_date
                Date previewed_date
                AnimeStatus anime_status
            }

            class AnimeVideoPlayer {
                + String name
                + AnimeVideoPlayer player
            }

            class AnimeTranslate {
                + String name
                + AnimeSeries series
            }

            class AnimeSeries {
                + int n
                + String name
                + SeasonOfAnime season
            }

            class SeasonOfAnime {
                + int n
                + Anime anime
                + Season season
            }

            class Anime {
                + User publisher
                + String originalName
                + String englishName
                + String russianName
                + String description
                + Stirng durationOfSeries
                + String ageRestriction
                + AnimeCategory category
                + AnimeStudio studio
                + Season season
                
                + SeasonOfAnime[] getSeasons()
                + AnimeSeries[] getSerieses()
            }

            class AnimeCategory {
                + String name
                + String description
            }

            class AnimeTag {
                + String name
                + String description
            }

            class Genre {
                + String name
                + String description
            }

            class AnimeStudio {
                + String name
                + String description
            }

            class Season {
                + int year
                + int timeOfYear
            }

            enum AnimeStatus {
                "Previewed",
                "Realesed"
                "Ongoing"
                "Leaved"
            }

            Model <|-- AnimeElement
            Model <|-- AnimeCategory
            Model <|-- AnimeTag
            Model <|-- Genre
            Model <|-- AnimeStudio
            Model <|-- Season

            AnimeElement <|-- AnimeVideoPlayer
            AnimeElement <|-- AnimeTranslate
            AnimeElement <|-- AnimeSeries
            AnimeElement <|-- SeasonOfAnime
            AnimeElement <|-- Anime

            AnimeElement - AnimeStatus

            AnimeTranslate *-- AnimeVideoPlayer
            AnimeSeries *-- AnimeTranslate
            SeasonOfAnime *-- AnimeSeries
            Anime *-- SeasonOfAnime
            AnimeCategory o-- Anime
            AnimeStudio o-- Anime
            Season o--Anime
        }
    }
}

@enduml